correct instagram section carousel overflow: hidden

--- a/app/scss/components/main/instagram-section.scss
+++ b/app/scss/components/main/instagram-section.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  overflow: hidden;
+
 
   &__header {
     max-width: 1044px;
@@ -24,3 +26,4 @@
     margin-bottom: 0;
   }
 }
+
